# rusty-pong

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  rusty_pong.d.ts  rusty_pong.js  rusty_pong_bg.wasm.d.ts
.github/workflows/: ci.yml
src/: audio.rs  ball.rs  board.rs  camera.rs  endgame.rs  main.rs  pause.rs  player.rs  score.rs  splash.rs  window.rs
web/: index.html
