[package]
name = "rusty_pong"
version = "0.1.0"
edition = "2021"
authors = ["0xAlcibiades <alcibiades.eth@protonmail.com>"]

[dependencies]
bevy = { version = "0.15.0", features = ["mp3", "webgpu"] }
bevy_rapier2d = "0.28.0"
rand = "0.8.5"

# Enable max optimizations for all dependencies in release builds
[profile.release]
opt-level = 3          # Maximum optimization
lto = true            # Enable link-time optimization
panic = 'abort'       # Abort on panic for smaller binary size
strip = true          # Strip symbols from binary
overflow-checks = false  # Disable integer overflow checks

# Optimize all dependencies even in debug builds for faster runs
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1  # Minimum optimization for primary package