[package]
name = "rusty_pong"
version = "0.1.0"
edition = "2021"
authors = ["0xAlcibiades <alcibiades.eth@protonmail.com>"]

[dependencies]
bevy = { version = "0.15.0", features = ["animation",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_sprite_picking_backend",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "default_font",
    "hdr",
    "multi_threaded",
    "png",
    "smaa_luts",
    "sysinfo_plugin",
    "tonemapping_luts",
    "vorbis",
    "webgl2",
    "x11",
    "webgpu"], default-features = false }
# Kira audio works in WASM, supports FLAC, and works in local runs
bevy_kira_audio = { version = "0.21.0", features = ["flac"], default-features = false }
bevy_rapier2d = "0.28.0"
rand = "0.8.5"

# Enable max optimizations for all dependencies in release builds
[profile.release]
opt-level = 3          # Maximum optimization
lto = true            # Enable link-time optimization
panic = 'abort'       # Abort on panic for smaller binary size
strip = true          # Strip symbols from binary
overflow-checks = false  # Disable integer overflow checks

# Optimize all dependencies even in debug builds for faster runs
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1  # Minimum optimization for primary package
